WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202299
[JSC] DFG recursive-tail-call optimization should not emit jump to call-frame with varargs
https://bugs.webkit.org/show_bug.cgi?id=202299
Summary
[JSC] DFG recursive-tail-call optimization should not emit jump to call-frame...
Yusuke Suzuki
Reported
2019-09-26 20:39:43 PDT
[JSC] DFG recursive-tail-call optimization should not emit jump to call-frame with varargs
Attachments
Patch
(6.29 KB, patch)
2019-09-26 20:57 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(7.32 KB, patch)
2019-09-26 20:59 PDT
,
Yusuke Suzuki
saam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2019-09-26 20:57:58 PDT
Created
attachment 379709
[details]
Patch
Yusuke Suzuki
Comment 2
2019-09-26 20:59:00 PDT
Created
attachment 379710
[details]
Patch
Yusuke Suzuki
Comment 3
2019-09-26 20:59:38 PDT
<
rdar://problem/52669116
>
Saam Barati
Comment 4
2019-09-26 23:57:45 PDT
Comment on
attachment 379710
[details]
Patch Nice. r=me
Saam Barati
Comment 5
2019-09-27 00:03:11 PDT
Can you open a bug to reinvestigate this in the future? I think requirements would be: - static argument count needs to be stored into stack - static argument count >= minimum - the arguments numbered >= minimum can’t use SetLocal, but need to use something like WriteStack which is not modeled by SSA lowering
Yusuke Suzuki
Comment 6
2019-09-27 09:57:03 PDT
Committed
r250430
: <
https://trac.webkit.org/changeset/250430
>
Yusuke Suzuki
Comment 7
2019-09-27 10:58:24 PDT
(In reply to Saam Barati from
comment #5
)
> Can you open a bug to reinvestigate this in the future? I think requirements > would be: > - static argument count needs to be stored into stack > - static argument count >= minimum > - the arguments numbered >= minimum can’t use SetLocal, but need to use > something like WriteStack which is not modeled by SSA lowering
Yeah! I added FIXME comment with URL :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug